@@ -4,7 +4,13 @@ use warnings;
 use strict;
 use feature 'say';
 
+use IPC::Shareable;
 use RPi::WiringPi;
+
+tie my %shared_testinfo, 'IPC::Shareable', {
+    key => 'test',
+    create => 1,
+};
 
 my $pi = RPi::WiringPi->new;
 
@@ -19,33 +25,28 @@ while (1){
     my $cpu = int $pi->cpu_percent;
     my $mem = int $pi->mem_percent;
     my $tmp = int $pi->core_temp('f');
+    my $test_num = int test_num();
 
     $s->putc($cpu);
     $s->putc($mem);
     $s->putc($tmp);
+
 #    $s->putc($test_num);
+# for the above, we're going to have to separate the test number into two bytes
+# and then merge them at the arduino end
+
+# will also need to test sending -1 to the arduino
 
     sleep 1;
 }
 
 sub test_num {
-    my $test_num_file = '/tmp/running_test.rpi-wiringpi';
-
-    my $fh_ok = eval {
-        open my $fh, '<', $test_num_file or die $!;
-        1;
-    };
-
-    if ($fh_ok){
-        $test_num = <$fh>;
-        close $fh;
+    if ($shared_testinfo{test_num} > 0){
+        return $shared_testinfo{test_num};
     }
     else {
-        $test_num = -1;
+        return -1;
     }
-
-#    print "**********$test_num**************\n";
-    return $test_num;
 }
 
 $pi->cleanup;
